# my-spotify-data

./: .gitignore  README.md  pyproject.toml
my_spotify_data/: __init__.py  download.py
tests/: example-history.csv  example-response.json  test_my_spotify_data.py
