[tool.poetry]
name = "my-spotify-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.16.1"
ratelimit = "^2.2.1"
tdqm = "^0.0.1"
pandas = "^1.1.3"
python-dotenv = "^0.14.0"
fastcore = "^1.2.5"
pylint = "^2.6.0"
black = "^20.8b1"
flake8 = "^3.8.4"
boto3 = "^1.16.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
